# ml-xgboost

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py
src/api/: __init__.py  prediction_service.py
src/features/: __init__.py  feature_engineer.py  interaction_features.py  lagging_features.py  statistical_features.py  technical_indicators.py  volatility_features.py
src/models/: __init__.py  ensemble_models.py  specialized_models.py  xgb_time_series.py
src/tuning/: __init__.py  bayesian_optimizer.py  grid_search_tuner.py  hyperparameter_tuner.py  optuna_tuner.py
src/utils/: __init__.py  interpretability.py  model_utils.py
src/validation/: __init__.py  cross_validator.py
